# ChangeLog for games-strategy/lordsawar
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +lordsawar-0.1.5.ebuild:
  Bumped, added boost dep. It seems that it's needed, but I don't see the
  binary link to it. Weird.

  11 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> lordsawar-0.1.4.ebuild:
  Dropped sound flag. It clashed with --as-needed for some reason.
  Tweakedsdl-mixer dep.

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +lordsawar-0.1.4.ebuild:
  Bumped.

  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> lordsawar-0.0.8.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.
