@@ -1,7 +1,6 @@
-DIST lordsawar-0.0.8.tar.gz 13340263 RMD160 6c94da86f035e9ac13f4b9ac1c8f106301e2f180 SHA1 196afefa8f71c30ca1d9a7aa5b3471e19576f7e2 SHA256 9786394b856beeee45fcfe0ca74befed573b5b5f201086f8bc73d3d54a3d28e1
-DIST lordsawar-0.1.4.tar.gz 20598785 RMD160 d7676c5df81bbbed0d40a6610cb3f36f863112e4 SHA1 83552717c3da46ba9c0b6580afa2b7ef21039835 SHA256 4efe206ef054bf133c42b07b92a68edc309af12408ff1f7f6433f8a16927e3dc
 DIST lordsawar-0.1.5.tar.gz 20596718 RMD160 4d7f417869c4d6ec4bf5d9b53335c78749c38522 SHA1 3d1eb9f0a5459889399f6087cf2aee2750379e36 SHA256 59e6f5760efdf9551a33892872a129b13349689456be7cd15191ef058a877bfd
-EBUILD lordsawar-0.0.8.ebuild 1610 RMD160 3b45d9e1903e3f75af1ae0e170b10f7042866eef SHA1 d028f6fe763e9c5244cb10220d0e3d0037547e98 SHA256 7b892a132635fe14dfcb13948f12d9dc69094fc91add801aa91ca902221014b7
-EBUILD lordsawar-0.1.4.ebuild 1563 RMD160 7530d55b52959b80bc78170af51cfba1223ab489 SHA1 725cab49d065d1710c55a2c0c12a20b03f05fb21 SHA256 a4db493a6c77df2ebef789232c4204268bc0d28310bb2391b6453360580cd1c6
+DIST lordsawar-0.1.6-pre2.tar.gz 20607714 RMD160 dcbffc9be2867936b2389c096bf0ad3df11d8de4 SHA1 9179d7ccc8d3ae44de21f560edf5e04517bb478a SHA256 4fc85bb13e08e402d9276c3204a69321b0876dfb9199408276c664ab9e255804
+EBUILD lordsawar-0.1.5-r1.ebuild 1298 RMD160 1a3aef1d6e1c2d58b303fabcb15761963cd4e76c SHA1 a5761105c08007a1bc399d90f78ab6da21a29ccb SHA256 d03d14f97c7c617893845615c108838a55f90c4fb3f3df85e2538f74fa2e43c1
 EBUILD lordsawar-0.1.5.ebuild 1599 RMD160 ead5a4d340f1d61e4fedf7a6ffd2c125bd06fa70 SHA1 a0db80a5f56926000ed9d5feaa975cce68539a0c SHA256 a9c4f82415489ac9f0020101eb843cfd611dfaa117f15068f6df263f97de2551
-MISC ChangeLog 703 RMD160 15c203593bfb213c07657bcf5f4a6bcaedb6104d SHA1 c7bf28bb2a9277724158acd3bdb9799cc8a37b3e SHA256 9744910d7b2bb4596f0832b11be93e93bd327fbd4218aae16d5df7866579083a
+EBUILD lordsawar-0.1.6_pre2.ebuild 1298 RMD160 1a3aef1d6e1c2d58b303fabcb15761963cd4e76c SHA1 a5761105c08007a1bc399d90f78ab6da21a29ccb SHA256 d03d14f97c7c617893845615c108838a55f90c4fb3f3df85e2538f74fa2e43c1
+MISC ChangeLog 909 RMD160 044672babc35915a47fd86bf9c721b1b9fc335e1 SHA1 fd56800a22e9adcfefd8aaa2070369c2b51cc2ff SHA256 efa1a695e3b871ece48c2d10739ecbf53dc36c8d4518570af045a4ef43655496
