@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Jun 2009; Piotr Szymaniak <lazy_bum@o2.pl> -lordsawar-0.0.8.ebuild,
+  -lordsawar-0.1.4.ebuild, +lordsawar-0.1.5-r1.ebuild,
+  +lordsawar-0.1.6_pre2.ebuild:
+  Bumped changes by A.C.Heron (bug #206790).
+
   06 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +lordsawar-0.1.5.ebuild:
   Bumped, added boost dep. It seems that it's needed, but I don't see the
   binary link to it. Weird.
